<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#17171B"
    android:layout_height="match_parent"
    tools:context=".TrainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTrain"
        android:layout_width="0dp"
        android:layout_height="385dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSliderTrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#CEA335"
        android:foregroundGravity="center_vertical"
        android:padding="10dp"
        android:textAlignment="center"
        app:cardBackgroundColor="#CEA335"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTrain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/card_back_highlight"
            android:backgroundTintMode="screen"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/card_back_highlight"
                android:fontFamily="@font/librebaskervillebold"
                android:gravity="center_vertical"
                android:text="@string/bestTime"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/card_back_highlight"
                android:fontFamily="@font/librebaskervillebold"
                android:gravity="center_vertical"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/card_back_highlight"
                android:fontFamily="@font/librebaskervillebold"
                android:gravity="center_vertical"
                android:text="@string/booking"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/card_back_highlight"
                android:fontFamily="@font/librebaskervillebold"
                android:gravity="center_vertical"

                android:text="@string/website"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/card_back_highlight"
                android:fontFamily="@font/librebaskervillebold"
                android:gravity="center_vertical"


                android:text="@string/contact2"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>